--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "server": "json-server server.json -w -d750 -p3333",
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@types/node": "^14.14.41",
     "@types/react": "^17.0.3",
+    "json-server": "^0.16.3",
     "typescript": "^4.2.4"
   }
 }
